selected violet as a theme color

--- a/html/axion_devcomputerinfo.html
+++ b/html/axion_devcomputerinfo.html
@@ -3,11 +3,11 @@
 
 <header class="main-header">
     <div class="container">
-        <h1 class="page-title">Contact Option 1</h1>
+        <h1 class="page-title">Developer Computer Info</h1>
 
         <ol class="breadcrumb pull-right">
             <li><a href="index.html">Home</a></li>
-            <li class="active">Contact Option 1</li>
+            <li class="active">Developer Computer Info</li>
         </ol>
     </div>
 </header>
@@ -19,63 +19,41 @@
         </div>
         <div class="col-md-8">
             <section>
-                <p>Lorem ipsum Ex aliqua tempor nisi laboris dolor id laborum irure minim tempor in sit dolore amet sit
-                    esse nostrud tempor nulla consequat aute in nostrud laboris sint ullamco amet nisi pariatur officia
-                    nulla pariatur in id et labore dolore ad sit.</p>
-
+                <p>
+                    Enter the purpose and use of the tool...
+                </p>
                 <form role="form">
                     <div class="form-group">
-                        <label for="InputCaller">Caller Information:</label>
-                        <input type="text" class="form-control" id="" placeholder="Badge, Username">
-                    </div>
-                    <div class="form-group">
-                        <label for="InputHint">Caller Hint:</label>
-                        <input type="text" class="form-control" id="" placeholder="SSN, Pin Code">
-                    </div>
-                    <div class="form-group">
-                        <label for="InputMessage">Mesagge</label>
-                        <textarea class="form-control" id="InputMessage" rows="8"></textarea>
+                        <label for="InputName">Developer Computer Name</label>
+                        <input type="text" class="form-control" id="InputDevComputerName"
+                            placeholder="Developer Computer">
                     </div>
                     <button type="submit" class="btn btn-ar btn-primary">Submit</button>
+                    <button type="reset" class="btn btn-ar btn-primary">Reset</button>
                     <div class="clearfix"></div>
                 </form>
             </section>
+            <hr class="dotted">
             <section>
                 <div class="panel panel-primary">
-                    <div class="panel-heading"><i class="fa fa-envelope-o"></i>Results</div>
+                    <div class="panel-heading"><i class="fa fa-file-text-o"></i>Results</div>
                     <div class="panel-body">
-                        <h4 class="section-title no-margin-top">Caller</h4>
-                        Ricardo Rocha
-                        <h4 class="section-title no-margin-top">Business Hours</h4>
-                        <ul class="list-unstyled">
-                            <li><strong>Monday-Friday:</strong> 9am to 7pm</li>
-                            <li><strong>Saturday:</strong> 9am to 2pm</li>
-                            <li><strong>Sunday:</strong> Closed</li>
-                        </ul>
+                        <div>
+                            Results here...
+                        </div>
                     </div>
                 </div>
             </section>
         </div>
+
         <div class="col-md-4">
             <section>
                 <div class="panel panel-primary">
                     <div class="panel-heading"><i class="fa fa-envelope-o"></i>Instructions</div>
                     <div class="panel-body">
-                        <h4 class="section-title no-margin-top">Contacts</h4>
-                        <address>
-                            <strong>Open Mind, Inc.</strong><br>
-                            795 Folsom Ave, Suite 600<br>
-                            San Francisco, CA 94107<br>
-                            <abbr title="Phone">P:</abbr> (123) 456-7890 <br>
-                            Mail: <a href="#">support@openmid.com</a>
-                        </address>
-                        <!-- Business Hours -->
-                        <h4 class="section-title no-margin-top">Business Hours</h4>
-                        <ul class="list-unstyled">
-                            <li><strong>Monday-Friday:</strong> 9am to 7pm</li>
-                            <li><strong>Saturday:</strong> 9am to 2pm</li>
-                            <li><strong>Sunday:</strong> Closed</li>
-                        </ul>
+                        <div>
+                            Type the instructions here...
+                        </div>
                     </div>
                 </div>
             </section>
@@ -84,12 +62,6 @@
 
     <hr class="dotted">
 
-    <section>
-        <div class="well well-sm">
-            <iframe width="100%" height="350"
-                src="http://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=central%2Bpark&ie=UTF8&z=12&t=m&iwloc=near&output=embed"></iframe>
-        </div>
-    </section>
 </div> <!-- container -->
 
 <!-- build:include layout/footer.html -->
